--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,14 @@ body {
     margin: 0;
     padding: 0;
 }
+textarea {
+    width:100%;
+    height: 60%;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 2px solid var(--primary);
+    resize: none;
+}
 h1, h2, h3, h4 {
     color: var(--primary);
     font-family: var(--font-heading);
